save this for github prod

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-{
+{"$schema": "http://json-schema.org/draft-04/schema#" ,
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
